samples/_failures_safe/1761346369_aee2be_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_54fce9e6.c: In function ‘main’:
./samples/SAFE/__tmp_54fce9e6.c:129:13: error: expected declaration or statement at end of input
  129 |             if (scanf("%d", &matrix2[i][j]) != 1) {
      |             ^~
./samples/SAFE/__tmp_54fce9e6.c:129:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_54fce9e6.c:129:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_54fce9e6.c:129:13: error: expected declaration or statement at end of input
